--- a/mysite/personal/templates/personal/home.html
+++ b/mysite/personal/templates/personal/home.html
@@ -1,5 +1,5 @@
 {% extends "personal/header.html" %}
 {% block content %}
-<p>Hey! Welcome to my website!</p>
+<p>Welcome to my website!</p>
 {% include 'personal/includes/htmlsnippet.html' %}
 {% endblock %}
